tests/error/ptr_assign_member.gw
#! [contains] can't assign member function to non member function pointer
funptr void Test();
var Test test;
class D {
  fun void test(){}
}

var D d;
d.test @=> test;
